# monetio

./: .codespell-exclude  .gitignore  .pep8speaks.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .stickler.yml  .travis.yaml  LICENSE  README.md  environment-dev.yml  meta.yaml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml
docs/: api.rst  conf.py  environment-docs.yml  get-in-touch.rst  index.rst  installing.rst  models.rst  observations.ipynb  observations.rst  tutorial.rst  wcoss.rst  why-monet.rst
docs/_static/: style.css
docs/source/: modules.rst  monetio.models.rst  monetio.obs.rst  monetio.profile.rst  monetio.rst  monetio.sat.rst
docs/tutorial/: CMAQ_hi_volcano.rst  NESDIS_VIIRS_AOD.rst  _models.rst  aqs_pams.rst  fv3chem_tutorial.rst  improve_trends_kmeans.rst  loading.rst  models.rst
monetio/: __init__.py  grids.py  util.py
monetio/data/: aqs_qualifiers.csv  sn_bound_10deg.txt
monetio/hdf/: __init__.py  hdfio.py  test_hdfio.py
monetio/models/: __init__.py  _cesm_fv_mm.py  _cesm_se_mm.py  _cmaq_mm.py  _rrfs_cmaq_mm.py  _rrfs_sd_mm.py  _wrfchem_mm.py  camx.py  cdump2netcdf.py  cmaq.py  cmaqr.py  fv3chem.py  hrrr_smoke.py  hysplit.py  hytraj.py  icap_mme.py  ncep_grib.py  pardump.py  prepchem.py  raqms.py  raqms_rt.py  traj.py
monetio/obs/: __init__.py  aeronet.py  airnow.py  aqs.py  cems_api.py  cems_mod.py  crn.py  epa_util.py  improve_mod.py  ish.py  ish_lite.py  nadp.py  obs_util.py  openaq.py  openaq_v2.py  pams.py
monetio/profile/: __init__.py  geoms.py  gml_ozonesonde.py  icartt.py  tolnet.py  umbc_aerosol.py
monetio/sat/: __init__.py  _gridded_eos_mm.py  _modis_l2_mm.py  _mopitt_l3_mm.py  _omps_l3_mm.py  _omps_limb_mm.py  _omps_nadir_mm.py  _tropomi_l2_no2_mm.py  goes.py  hdfio.py  lpdaac_download.py  modis_l2.py  modis_ornl.py  nasa_utils.py  nesdis_avhrr_aot_aws_gridded.py  nesdis_edr_viirs.py  nesdis_eps_viirs.py  nesdis_eps_viirs_aod_nrt.py  nesdis_frp.py  nesdis_viirs_aod_aws_gridded.py  nesdis_viirs_aod_gridded.py  nesdis_viirs_ndvi_aws_gridded.py  omps_limb.py  omps_nadir.py  utility.py
tests/: test_aeronet.py  test_airnow.py  test_aqs.py  test_geoms.py  test_gml_ozonesonde.py  test_hdfio.py  test_hysplit.py  test_hytraj.py  test_icap_mme.py  test_import.py  test_ish.py  test_ish_lite.py  test_mopitt_l3.py  test_openaq.py  test_openaq_v2.py  test_raqms.py  test_util.py  test_viirs_aod.py
tests/data/: aeronet-AOD15-example.txt  aeronet-inv-ALM15-SIZ-example.txt  tdump.1  tdump.2  tolnet-hdf4-test-data.hdf  tolnet-hdf4-test-data_h4tonccf_nc4.nc  uwhyb_06_01_2017_18Z.chem.assim.nc
