[build-system]
requires = ["setuptools>=39.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = "monetio"
profile = "black"
line_length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The distutils package is deprecated:DeprecationWarning:joblib.backports",
    "ignore:The error_bad_lines argument has been deprecated:FutureWarning::",
    "ignore:The warn_bad_lines argument has been deprecated:FutureWarning::",
    "ignore:The NPY_CHAR type_num is deprecated. Please port your code to use NPY_STRING instead.:DeprecationWarning::",
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning::",
    "ignore:The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.:FutureWarning::",
]
