[metadata]
name = monetio
version = attr: monetio.__version__
description = The Model and Observation Evaluation Toolkit (MONET) I/O package
long_description = file: README.md
url = https://github.com/noaa-oar-arl/monetio
license = MIT
author = Barry D. Baker
author_email = barry.baker@noaa.gov
maintainer = Barry D. Baker
maintainer_email = barry.baker@noaa.gov
# keywords = model, verification, hysplit, cmaq, atmosphere, camx, evaluation

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  dask
  netCDF4  # `netcdf4` on conda-forge; TODO: make optional?
  pandas
  s3fs  # TODO: optional?
  scipy  # TODO: optional?
  xarray

# [options.extras_require]  # TODO

[options.package_data]
* = data/*.csv, data/*.tsv, data/*.txt, data/*.png

[flake8]
max-line-length = 100
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  W503 # line break before binary operator
  E226 # missing whitespace around arithmetic operator
